[package]
name = "rust_tsv_tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"] }
flate2 = "1.0.22"
failure = "*"
clap = "*"
log = "*"
tempfile = "*"
rayon = "*"
simplelog = "*"
ctrlc = "*"

[dependencies.pyo3]
version = "*"
features = ["extension-module"]

[lib]
name = "rust_tsv_tools"
crate-type = ["cdylib"]